--- a/CNN_실습.ipynb
+++ b/CNN_실습.ipynb
@@ -31,9 +31,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 710
         },
-        "outputId": "03fd2ec2-f095-4e7a-b467-a0d3c47fd64f"
+        "outputId": "2ebaf5ac-4069-438c-ba03-64913b016d05"
       },
       "source": [
         "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -58,15 +58,83 @@
         "    'dog-vs-cat/validation',\n",
         "    target_size=(100, 100),\n",
         "    class_mode='binary',\n",
-        "    shuffle=False)"
+        "    shuffle=False)\n",
+        "\n",
+        "#모형 만들기\n",
+        "from keras.layers import Conv2D, Dense, Dropout, Flatten, MaxPooling2D\n",
+        "from keras.models import Sequential\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Conv2D(32, (5, 5), activation='relu', input_shape=(100, 100, 3)))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dropout(0.5))\n",
+        "model.add(Dense(1, activation='sigmoid'))\n",
+        "\n",
+        "model.summary()"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0703 07:43:16.643563 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "W0703 07:43:16.661692 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "W0703 07:43:16.668731 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
             "Found 2000 images belonging to 2 classes.\n",
             "Found 800 images belonging to 2 classes.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W0703 07:43:16.703407 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "\n",
+            "W0703 07:43:16.734407 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+            "\n",
+            "W0703 07:43:16.744317 140241763555200 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_1 (Conv2D)            (None, 96, 96, 32)        2432      \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_1 (MaxPooling2 (None, 48, 48, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_2 (Conv2D)            (None, 46, 46, 32)        9248      \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_2 (MaxPooling2 (None, 23, 23, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "flatten_1 (Flatten)          (None, 16928)             0         \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 16928)             0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 1)                 16929     \n",
+            "=================================================================\n",
+            "Total params: 28,609\n",
+            "Trainable params: 28,609\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
           ],
           "name": "stdout"
         }
