Colaboratory를 통해 생성됨

--- a/CNN_실습.ipynb
+++ b/CNN_실습.ipynb
@@ -73,7 +73,23 @@
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(1, activation='sigmoid'))\n",
         "\n",
-        "model.summary()"
+        "model.summary()\n",
+        "\n",
+        "from keras.optimizers import Adam, RMSprop\n",
+        "model.compile(loss='binary_crossentropy', metrics=['accuracy'], optimizer=Adam())\n",
+        "from keras.callbacks import ModelCheckpoint, TensorBoard\n",
+        "model.fit_generator(\n",
+        "    train, validation_data=valid, epochs=5,\n",
+        "    callbacks=[\n",
+        "        TensorBoard(log_dir='log_cnn'),\n",
+        "        ModelCheckpoint('cnn-{epoch:02d}.hdf5', save_best_only=True),\n",
+        "    ])\n",
+        "\n",
+        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "!unzip -o ngrok-stable-linux-amd64.zip\n",
+        "get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
+        "get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
       ],
       "execution_count": 0,
       "outputs": [
