--- a/CNN_실습.ipynb
+++ b/CNN_실습.ipynb
@@ -29,13 +29,22 @@
       "metadata": {
         "id": "bqPacsBowt7A",
         "colab_type": "code",
-        "outputId": "2ebaf5ac-4069-438c-ba03-64913b016d05",
+        "outputId": "d6ff5ed8-4f85-4b4f-b9bc-03ef2f9f7c6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 710
+          "height": 863
         }
       },
       "source": [
+        "from urllib.request import urlretrieve\n",
+        "urlretrieve('http://doc.mindscale.kr/km/unstructured/dog-vs-cat.zip',\n",
+        "            'dog-vs-cat.zip')\n",
+        "from zipfile import ZipFile\n",
+        "\n",
+        "with ZipFile('dog-vs-cat.zip') as z:\n",
+        "    z.extractall()\n",
+        "\n",
+        "\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
         "img_gen = ImageDataGenerator(\n",
@@ -76,12 +85,14 @@
         "model.summary()\n",
         "\n",
         "from keras.optimizers import Adam, RMSprop\n",
+        "from keras.callbacks import TensorBoard\n",
+        "LOG_DIR = 'log_model'\n",
         "model.compile(loss='binary_crossentropy', metrics=['accuracy'], optimizer=Adam())\n",
         "from keras.callbacks import ModelCheckpoint, TensorBoard\n",
         "model.fit_generator(\n",
-        "    train, validation_data=valid, epochs=5,\n",
+        "    train, validation_data=valid,steps_per_epoch=10, validation_steps=5, epochs=5,\n",
         "    callbacks=[\n",
-        "        TensorBoard(log_dir='log_cnn'),\n",
+        "        TensorBoard(log_dir=LOG_DIR),\n",
         "        ModelCheckpoint('cnn-{epoch:02d}.hdf5', save_best_only=True),\n",
         "    ])\n",
         "\n",
@@ -91,66 +102,58 @@
         "get_ipython().system_raw('./ngrok http 6006 &')\n",
         "! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0703 07:43:16.643563 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-            "\n",
-            "W0703 07:43:16.661692 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "W0703 07:43:16.668731 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
             "Found 2000 images belonging to 2 classes.\n",
-            "Found 800 images belonging to 2 classes.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "W0703 07:43:16.703407 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-            "\n",
-            "W0703 07:43:16.734407 140241763555200 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
-            "\n",
-            "W0703 07:43:16.744317 140241763555200 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            "Found 800 images belonging to 2 classes.\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_1 (Conv2D)            (None, 96, 96, 32)        2432      \n",
+            "conv2d_9 (Conv2D)            (None, 96, 96, 32)        2432      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_1 (MaxPooling2 (None, 48, 48, 32)        0         \n",
+            "max_pooling2d_9 (MaxPooling2 (None, 48, 48, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_2 (Conv2D)            (None, 46, 46, 32)        9248      \n",
+            "conv2d_10 (Conv2D)           (None, 46, 46, 32)        9248      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_2 (MaxPooling2 (None, 23, 23, 32)        0         \n",
+            "max_pooling2d_10 (MaxPooling (None, 23, 23, 32)        0         \n",
             "_________________________________________________________________\n",
-            "flatten_1 (Flatten)          (None, 16928)             0         \n",
+            "flatten_5 (Flatten)          (None, 16928)             0         \n",
             "_________________________________________________________________\n",
-            "dropout_1 (Dropout)          (None, 16928)             0         \n",
+            "dropout_5 (Dropout)          (None, 16928)             0         \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 1)                 16929     \n",
+            "dense_5 (Dense)              (None, 1)                 16929     \n",
             "=================================================================\n",
             "Total params: 28,609\n",
             "Trainable params: 28,609\n",
             "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
+            "_________________________________________________________________\n",
+            "Epoch 1/5\n",
+            "10/10 [==============================] - 8s 842ms/step - loss: 0.7258 - acc: 0.4656 - val_loss: 1.0750 - val_acc: 0.0063\n",
+            "Epoch 2/5\n",
+            "10/10 [==============================] - 6s 612ms/step - loss: 0.7388 - acc: 0.4781 - val_loss: 0.9868 - val_acc: 0.0000e+00\n",
+            "Epoch 3/5\n",
+            "10/10 [==============================] - 6s 627ms/step - loss: 0.7012 - acc: 0.5250 - val_loss: 0.6912 - val_acc: 0.5250\n",
+            "Epoch 4/5\n",
+            "10/10 [==============================] - 6s 605ms/step - loss: 0.6935 - acc: 0.5219 - val_loss: 0.7044 - val_acc: 0.3563\n",
+            "Epoch 5/5\n",
+            "10/10 [==============================] - 6s 621ms/step - loss: 0.7051 - acc: 0.5312 - val_loss: 0.9300 - val_acc: 0.0000e+00\n",
+            "--2019-07-03 12:26:24--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+            "Resolving bin.equinox.io (bin.equinox.io)... 3.209.102.29, 52.45.111.123, 54.165.51.142, ...\n",
+            "Connecting to bin.equinox.io (bin.equinox.io)|3.209.102.29|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 17556757 (17M) [application/octet-stream]\n",
+            "Saving to: ‘ngrok-stable-linux-amd64.zip.2’\n",
+            "\n",
+            "ngrok-stable-linux- 100%[===================>]  16.74M  19.0MB/s    in 0.9s    \n",
+            "\n",
+            "2019-07-03 12:26:25 (19.0 MB/s) - ‘ngrok-stable-linux-amd64.zip.2’ saved [17556757/17556757]\n",
+            "\n",
+            "Archive:  ngrok-stable-linux-amd64.zip\n",
+            "  inflating: ngrok                   \n",
+            "https://299aba12.ngrok.io\n"
           ],
           "name": "stdout"
         }
