Colaboratory를 통해 생성됨

--- a/CNN_실습.ipynb
+++ b/CNN_실습.ipynb
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "bqPacsBowt7A",
         "colab_type": "code",
-        "outputId": "d6ff5ed8-4f85-4b4f-b9bc-03ef2f9f7c6b",
+        "outputId": "f59ce506-bb75-4ed0-fe56-200557d2ab1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 863
+          "height": 629
         }
       },
       "source": [
@@ -96,13 +96,21 @@
         "        ModelCheckpoint('cnn-{epoch:02d}.hdf5', save_best_only=True),\n",
         "    ])\n",
         "\n",
-        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-        "!unzip -o ngrok-stable-linux-amd64.zip\n",
-        "get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
-        "get_ipython().system_raw('./ngrok http 6006 &')\n",
-        "! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
+        "from keras.preprocessing.image import load_img \n",
+        "img = load_img('dog-vs-cat/validation/cat/cat.1000.jpg', target_size=(100, 100))\n",
+        "import numpy\n",
+        "img_array = numpy.array(img) / 255\n",
+        "img_array.shape\n",
+        "model.predict(numpy.array([img_array]))\n",
+        "\n",
+        "\n",
+        "#!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "#!unzip -o ngrok-stable-linux-amd64.zip\n",
+        "#get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
+        "#get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "#! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,50 +120,48 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_9 (Conv2D)            (None, 96, 96, 32)        2432      \n",
+            "conv2d_17 (Conv2D)           (None, 96, 96, 32)        2432      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_9 (MaxPooling2 (None, 48, 48, 32)        0         \n",
+            "max_pooling2d_17 (MaxPooling (None, 48, 48, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_10 (Conv2D)           (None, 46, 46, 32)        9248      \n",
+            "conv2d_18 (Conv2D)           (None, 46, 46, 32)        9248      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_10 (MaxPooling (None, 23, 23, 32)        0         \n",
+            "max_pooling2d_18 (MaxPooling (None, 23, 23, 32)        0         \n",
             "_________________________________________________________________\n",
-            "flatten_5 (Flatten)          (None, 16928)             0         \n",
+            "flatten_9 (Flatten)          (None, 16928)             0         \n",
             "_________________________________________________________________\n",
-            "dropout_5 (Dropout)          (None, 16928)             0         \n",
+            "dropout_9 (Dropout)          (None, 16928)             0         \n",
             "_________________________________________________________________\n",
-            "dense_5 (Dense)              (None, 1)                 16929     \n",
+            "dense_9 (Dense)              (None, 1)                 16929     \n",
             "=================================================================\n",
             "Total params: 28,609\n",
             "Trainable params: 28,609\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "Epoch 1/5\n",
-            "10/10 [==============================] - 8s 842ms/step - loss: 0.7258 - acc: 0.4656 - val_loss: 1.0750 - val_acc: 0.0063\n",
+            "10/10 [==============================] - 9s 859ms/step - loss: 0.7227 - acc: 0.5281 - val_loss: 0.5363 - val_acc: 1.0000\n",
             "Epoch 2/5\n",
-            "10/10 [==============================] - 6s 612ms/step - loss: 0.7388 - acc: 0.4781 - val_loss: 0.9868 - val_acc: 0.0000e+00\n",
+            "10/10 [==============================] - 6s 610ms/step - loss: 0.7010 - acc: 0.5187 - val_loss: 0.6706 - val_acc: 0.6375\n",
             "Epoch 3/5\n",
-            "10/10 [==============================] - 6s 627ms/step - loss: 0.7012 - acc: 0.5250 - val_loss: 0.6912 - val_acc: 0.5250\n",
+            "10/10 [==============================] - 6s 629ms/step - loss: 0.7479 - acc: 0.4594 - val_loss: 0.6835 - val_acc: 0.5875\n",
             "Epoch 4/5\n",
-            "10/10 [==============================] - 6s 605ms/step - loss: 0.6935 - acc: 0.5219 - val_loss: 0.7044 - val_acc: 0.3563\n",
+            "10/10 [==============================] - 6s 627ms/step - loss: 0.6974 - acc: 0.4875 - val_loss: 0.6434 - val_acc: 0.8938\n",
             "Epoch 5/5\n",
-            "10/10 [==============================] - 6s 621ms/step - loss: 0.7051 - acc: 0.5312 - val_loss: 0.9300 - val_acc: 0.0000e+00\n",
-            "--2019-07-03 12:26:24--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-            "Resolving bin.equinox.io (bin.equinox.io)... 3.209.102.29, 52.45.111.123, 54.165.51.142, ...\n",
-            "Connecting to bin.equinox.io (bin.equinox.io)|3.209.102.29|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 17556757 (17M) [application/octet-stream]\n",
-            "Saving to: ‘ngrok-stable-linux-amd64.zip.2’\n",
-            "\n",
-            "ngrok-stable-linux- 100%[===================>]  16.74M  19.0MB/s    in 0.9s    \n",
-            "\n",
-            "2019-07-03 12:26:25 (19.0 MB/s) - ‘ngrok-stable-linux-amd64.zip.2’ saved [17556757/17556757]\n",
-            "\n",
-            "Archive:  ngrok-stable-linux-amd64.zip\n",
-            "  inflating: ngrok                   \n",
-            "https://299aba12.ngrok.io\n"
+            "10/10 [==============================] - 6s 619ms/step - loss: 0.6932 - acc: 0.5531 - val_loss: 0.6564 - val_acc: 0.8187\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.4958537]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     }
