Colaboratory를 통해 생성됨

--- a/image_지도학습.ipynb
+++ b/image_지도학습.ipynb
@@ -81,10 +81,10 @@
       "metadata": {
         "id": "FfRPOVHrkGWL",
         "colab_type": "code",
-        "outputId": "4dc4d9f7-4cf8-4f5a-bc32-c080fd8e5b88",
+        "outputId": "fa481996-5861-4515-9d94-7ca94554299b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 775
         }
       },
       "source": [
@@ -95,29 +95,29 @@
         "import os\n",
         "\n",
         "\n",
-        "image_path='jubeam.jpg'\n",
+        "#image_path='jubeam.jpg'\n",
         "\n",
-        "image=Image.open(image_path)\n",
+        "#image=Image.open(image_path)\n",
         "\n",
-        "image\n",
-        "image.resize((128, 128))  # 픽셀 단위\n",
-        "resize = image.resize((128, 128))\n",
-        "resize.save('resized.jpg')\n",
-        "resize.rotate(45)  # 반시계방향 각도\n",
-        "resize.transpose(Image.FLIP_TOP_BOTTOM)\n",
-        "resize.transpose(Image.FLIP_LEFT_RIGHT)\n",
-        "resize.transpose(Image.ROTATE_90)\n",
-        "resize.filter(ImageFilter.BLUR)\n",
-        "resize.filter(ImageFilter.EMBOSS)\n",
-        "resize.filter(ImageFilter.CONTOUR)\n",
-        "resize.filter(ImageFilter.DETAIL)\n",
-        "resize.filter(ImageFilter.EDGE_ENHANCE)\n",
-        "resize.filter(ImageFilter.SMOOTH)\n",
-        "resize.convert('L')  # ITU-R 601-2 luma transform\n",
-        "m = numpy.asarray(resize)\n",
-        "m.shape\n",
-        "bw = numpy.asarray(resize.convert('L'))\n",
-        "bw.shape\n",
+        "#image\n",
+        "#image.resize((128, 128))  # 픽셀 단위\n",
+        "#resize = image.resize((128, 128))\n",
+        "#resize.save('resized.jpg')\n",
+        "#resize.rotate(45)  # 반시계방향 각도\n",
+        "#resize.transpose(Image.FLIP_TOP_BOTTOM)\n",
+        "#resize.transpose(Image.FLIP_LEFT_RIGHT)\n",
+        "#resize.transpose(Image.ROTATE_90)\n",
+        "#resize.filter(ImageFilter.BLUR)\n",
+        "#resize.filter(ImageFilter.EMBOSS)\n",
+        "#resize.filter(ImageFilter.CONTOUR)\n",
+        "#resize.filter(ImageFilter.DETAIL)\n",
+        "#resize.filter(ImageFilter.EDGE_ENHANCE)\n",
+        "#resize.filter(ImageFilter.SMOOTH)\n",
+        "#resize.convert('L')  # ITU-R 601-2 luma transform\n",
+        "#m = numpy.asarray(resize)\n",
+        "#m.shape\n",
+        "#bw = numpy.asarray(resize.convert('L'))\n",
+        "#bw.shape\n",
         "\n",
         "\n",
         "#실습에서 쓸 데이터는 캐글에서 강아지와 고양이를 구분하는 경연용 데이터(www.kaggle.com/c/dogs-vs-cats/data)\n",
@@ -187,33 +187,47 @@
         "img_array.shape\n",
         "model.predict(numpy.array([img_array]))\n",
         "\n",
-        "from lime.lime_image import LimeImageExplainer\n",
+        "#from lime.lime_image import LimeImageExplainer\n",
         "\n",
-        "explainer = LimeImageExplainer()\n",
-        "explanation = explainer.explain_instance(img_array, model.predict, num_samples=30)\n",
-        "temp, mask = explanation.get_image_and_mask(label=0, hide_rest=True)\n",
-        "from skimage.segmentation import mark_boundaries\n",
-        "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline\n",
-        "plt.imshow(mark_boundaries(temp, mask))\n",
+        "#explainer = LimeImageExplainer()\n",
+        "#explanation = explainer.explain_instance(img_array, model.predict, num_samples=30)\n",
+        "#temp, mask = explanation.get_image_and_mask(label=0, hide_rest=True)\n",
+        "#from skimage.segmentation import mark_boundaries\n",
+        "#import matplotlib.pyplot as plt\n",
+        "#%matplotlib inline\n",
+        "#plt.imshow(mark_boundaries(temp, mask))\n",
         "\n",
         "\n",
-        "from keras.callbacks import TensorBoard\n",
-        "LOG_DIR = 'log_model'\n",
-        "model.fit_generator(\n",
-        "    train, validation_data=valid, steps_per_epoch=10, validation_steps=5,epochs=5,\n",
-        "    callbacks=[\n",
-        "        TensorBoard(log_dir=LOG_DIR)\n",
-        "    ])\n",
+        "#from keras.callbacks import TensorBoard\n",
+        "#LOG_DIR = 'log_model'\n",
+        "#model.fit_generator(\n",
+        "#    train, validation_data=valid, steps_per_epoch=10, validation_steps=5,epochs=5,\n",
+        "#    callbacks=[\n",
+        "#        TensorBoard(log_dir=LOG_DIR)\n",
+        "#    ])\n",
         "\n",
-        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-        "!unzip -o ngrok-stable-linux-amd64.zip\n",
-        "get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
-        "get_ipython().system_raw('./ngrok http 6006 &')\n",
-        "! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
+        "#!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "#!unzip -o ngrok-stable-linux-amd64.zip\n",
+        "#get_ipython().system_raw(f'tensorboard --logdir {LOG_DIR} --host 0.0.0.0 --port 6006 &')\n",
+        "#get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "#! curl -s http://localhost:4040/api/tunnels | tr '\"' '\\n' | grep \"https://\""
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n",
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0703 12:45:51.278701 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "W0703 12:45:51.297153 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+            "\n",
+            "W0703 12:45:51.310938 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -222,62 +236,59 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "flatten_9 (Flatten)          (None, 30000)             0         \n",
+            "flatten_1 (Flatten)          (None, 30000)             0         \n",
             "_________________________________________________________________\n",
-            "dense_9 (Dense)              (None, 1)                 30001     \n",
+            "dense_1 (Dense)              (None, 1)                 30001     \n",
             "=================================================================\n",
             "Total params: 30,001\n",
             "Trainable params: 30,001\n",
             "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "Epoch 1/5\n",
-            "10/10 [==============================] - 3s 295ms/step - loss: 2.3539 - acc: 0.5000 - val_loss: 0.2400 - val_acc: 0.9938\n",
-            "Epoch 2/5\n",
-            "10/10 [==============================] - 2s 186ms/step - loss: 1.1806 - acc: 0.5281 - val_loss: 1.7201 - val_acc: 0.0625\n",
-            "Epoch 3/5\n",
-            "10/10 [==============================] - 2s 200ms/step - loss: 0.9639 - acc: 0.5000 - val_loss: 1.1115 - val_acc: 0.5000\n",
-            "Epoch 4/5\n",
-            "10/10 [==============================] - 2s 203ms/step - loss: 0.8972 - acc: 0.5125 - val_loss: 0.5211 - val_acc: 0.7375\n",
-            "Epoch 5/5\n",
-            "10/10 [==============================] - 2s 200ms/step - loss: 0.7761 - acc: 0.5563 - val_loss: 1.7956 - val_acc: 0.0125\n",
-            "Epoch 1/5\n",
-            "10/10 [==============================] - 2s 233ms/step - loss: 0.7818 - acc: 0.5312 - val_loss: 1.0744 - val_acc: 0.1500\n",
-            "Epoch 2/5\n",
-            "10/10 [==============================] - 2s 190ms/step - loss: 0.7729 - acc: 0.5499 - val_loss: 0.5872 - val_acc: 0.6750\n",
-            "Epoch 3/5\n",
-            "10/10 [==============================] - 2s 201ms/step - loss: 0.7783 - acc: 0.5687 - val_loss: 1.9189 - val_acc: 0.0063\n",
-            "Epoch 4/5\n",
-            "10/10 [==============================] - 2s 197ms/step - loss: 0.8658 - acc: 0.5156 - val_loss: 0.6970 - val_acc: 0.6125\n",
-            "Epoch 5/5\n",
-            "10/10 [==============================] - 2s 195ms/step - loss: 0.8729 - acc: 0.4531 - val_loss: 0.6047 - val_acc: 0.6813\n",
-            "--2019-07-03 04:52:30--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-            "Resolving bin.equinox.io (bin.equinox.io)... 54.173.32.212, 34.206.9.96, 52.86.186.182, ...\n",
-            "Connecting to bin.equinox.io (bin.equinox.io)|54.173.32.212|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 17556757 (17M) [application/octet-stream]\n",
-            "Saving to: ‘ngrok-stable-linux-amd64.zip.1’\n",
-            "\n",
-            "ngrok-stable-linux- 100%[===================>]  16.74M  20.4MB/s    in 0.8s    \n",
-            "\n",
-            "2019-07-03 04:52:31 (20.4 MB/s) - ‘ngrok-stable-linux-amd64.zip.1’ saved [17556757/17556757]\n",
-            "\n",
-            "Archive:  ngrok-stable-linux-amd64.zip\n",
-            "  inflating: ngrok                   \n",
-            "https://ef512248.ngrok.io\n"
+            "_________________________________________________________________\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "display_data",
+          "output_type": "stream",
+          "text": [
+            "W0703 12:45:51.349066 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n",
+            "W0703 12:45:51.356267 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+            "\n",
+            "W0703 12:45:51.362797 140080615823232 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+            "W0703 12:45:51.545650 140080615823232 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "10/10 [==============================] - 3s 266ms/step - loss: 2.3366 - acc: 0.4313 - val_loss: 1.0629 - val_acc: 0.0938\n",
+            "Epoch 2/5\n",
+            "10/10 [==============================] - 2s 196ms/step - loss: 1.0198 - acc: 0.5906 - val_loss: 1.3020 - val_acc: 0.0625\n",
+            "Epoch 3/5\n",
+            "10/10 [==============================] - 2s 194ms/step - loss: 0.7989 - acc: 0.5000 - val_loss: 0.7249 - val_acc: 0.5375\n",
+            "Epoch 4/5\n",
+            "10/10 [==============================] - 2s 198ms/step - loss: 0.7379 - acc: 0.5687 - val_loss: 0.5060 - val_acc: 0.8125\n",
+            "Epoch 5/5\n",
+            "10/10 [==============================] - 2s 195ms/step - loss: 0.7560 - acc: 0.5031 - val_loss: 1.0302 - val_acc: 0.1938\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
           "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAE4lJREFUeJzt3X2MXNV5x/HvMy/74rXNer3EGNsB\nW7agkChAXAoif1AgCgUCRIGINIpcRHEVNQqhlRJoK6WV8keQohD+qFAdaETSqiQ1qLiuFEQISK1U\nuRgcNYB5K682Nl6/4MVm32b26R/n3JnZZfGOd+dtfX4fyZo7d+6de+bKzz7nnHvuuebuiEhacu0u\ngIi0ngJfJEEKfJEEKfBFEqTAF0mQAl8kQQp8kQTNK/DN7Goze9nMXjOzuxpVKBFpLpvrAB4zywOv\nAJ8H9gDPAF919xcbVzwRaYbCPPa9GHjN3V8HMLOHgRuAjw18M9MwQZEmc3ebbZv5VPVXAe/UvN8T\n101hZpvNbKeZ7ZzHsUSkgeaT8evi7luALaCML9Ip5pPx9wJrat6vjutEpMPNJ/CfATaY2Voz6wJu\nAbY1plgi0kxzruq7e8nMvgk8DuSBf3T3FxpWMhFpmjlfzpvTwdTGF2m6Zvfqi8gCpcAXSZACXyRB\nCnyRBCnwRRKkwBdJkAJfJEEKfJEEKfBFEqTAF0mQAl8kQQp8kQQp8EUSpMAXSZACXyRBCnyRBCnw\nRRKkwBdJkAJfJEEKfJEEKfBFEqTAF0mQAl8kQQp8kQQp8EUSpMAXSZACXyRBCnyRBCnwRRKkwBdJ\nkAJfJEEKfJEEKfBFEqTAF0nQrIFvZmvM7Ckze9HMXjCzO+L6ATN7wsxeja/Lml9cEWkEc/cTb2C2\nEljp7s+Z2RLgWeBG4E+Aw+7+AzO7C1jm7t+d5btOfDARmTd3t9m2mTXju/s+d38uLn8A7AZWATcA\nD8XNHiL8MRCRBeCk2vhmdjZwIbADWOHu++JH+4EVDS2ZiDRNod4NzWwx8AjwbXcfNqvWJtzdP64a\nb2abgc3zLaiINM6sbXwAMysC24HH3f1Hcd3LwOXuvi/2Azzt7ufM8j1q44s0WUPa+BZS+4PA7izo\no23Apri8CXhsLoUUkdarp1f/c8B/Ar8DJuPqvyK0838JfBJ4C/iKux+e5buU8UWarJ6MX1dVv1EU\n+CLN15CqvoicehT4IglS4IskSIEvkiAFvkiCFPgiCVLgiyRIgS+SIAW+SIIU+CIJUuCLJEiBL5Ig\nBb5IghT4IglS4IskSIEvkiAFvkiCFPgiCVLgiyRIgS+SIAW+SIIU+CIJUuCLJEiBL5IgBb5IghT4\nIglS4IskSIEvkiAFvkiCFPgiCVLgiyRIgS+SIAW+SIIU+CIJUuCLJKjuwDezvJntMrPt8f1aM9th\nZq+Z2S/MrKt5xRSRRjqZjH8HsLvm/T3Ave6+HjgC3NbIgolI89QV+Ga2GrgWeCC+N+AKYGvc5CHg\nxmYUUEQar96M/2PgO8BkfL8ceN/dS/H9HmDVTDua2WYz22lmO+dVUhFpmFkD38yuAw64+7NzOYC7\nb3H3je6+cS77i0jjFerY5jLgejO7BugBlgL3Af1mVohZfzWwt3nFFJFGmjXju/vd7r7a3c8GbgF+\n4+5fA54CboqbbQIea1opRaSh5nMd/7vAX5jZa4Q2/4ONKZKINJu5e+sOZta6g4kkyt1ttm00ck8k\nQQp8kQQp8EUSpMAXSZACXyRBCnyRBCnwRRKkwBdJkAJfJEEKfJEEKfBFEqTAF0mQAl8kQQp8kQQp\n8EUSpMAXSZACXyRBCnyRBCnwRRKkwBdJkAJfJEEKfJEEKfBFEqTAF0mQAl8kQQp8kQQp8EUSpMAX\nSZACXyRBCnyRBCnwRRKkwBdJkAJfJEEKfJEE1RX4ZtZvZlvN7CUz221ml5rZgJk9YWavxtdlzS6s\niDRGvRn/PuBX7n4u8BlgN3AX8KS7bwCejO9FZAEwdz/xBmanAb8F1nnNxmb2MnC5u+8zs5XA0+5+\nzizfdeKDici8ubvNtk09GX8tMAT81Mx2mdkDZtYHrHD3fXGb/cCKuRdVRFqpnsAvABcB97v7hcBx\nplXrY01gxmxuZpvNbKeZ7ZxvYUWkMeoJ/D3AHnffEd9vJfwheC9W8YmvB2ba2d23uPtGd9/YiAKL\nyPzNGvjuvh94x8yy9vuVwIvANmBTXLcJeKwpJRSRhpu1cw/AzC4AHgC6gNeBWwl/NH4JfBJ4C/iK\nux+e5XvUuSfSZPV07tUV+I2iwBdpvkb16ovIKUaBL5IgBb5IghT4IglS4IskSIEvkiAFvkiCFPgi\nCVLgiyRIgS+SIAW+SIIU+CIJUuCLJEiBL5IgBb5IghT4IgkqtLsAzTDT3CI269QEIulQxhdJ0CmV\n8U80i1j2mTK/iDK+SJIU+CIJUuCLJOiUauNPd/s3/qyy/JP7/6GNJRHpLMr4Igk6pTN+T0/PR9ap\nd19EGV8kSad0xq/jSUIiSVLGF0mQAl8kQafU03Kn/5Rbb7+9slyeDK8/e/An08rUzBKJtJ6elisi\nMzqlO/eOHTtWWe7q7gXgquuuB+DX27cBurwnaVLGF0nQKZ3xJydLleXy5ERcmtoRoEwvKVLGF0lQ\nXRnfzO4E/pSQLn8H3AqsBB4GlgPPAl939/EmlXNOPvjgg8pybmQUgHK53K7iiHSMWTO+ma0CvgVs\ndPdPAXngFuAe4F53Xw8cAW5rZkFFpHHqbeMXgF4zmwAWAfuAK4A/jp8/BPwtcH+jCzgXX7z+aqC2\nXQ+TpdC2zxfCT77u5i8D4P7IvI83Uz9BPcMj1L8g7TJrxnf3vcAPgbcJAX+UULV/392z3rM9wKqZ\n9jezzWa208x2NqbIIjJf9VT1lwE3AGuBM4E+4Op6D+DuW9x9o7tvnHMpRaSh6qnqXwW84e5DAGb2\nKHAZ0G9mhZj1VwN7m1fME5terc7lQh168eLFlXWFYjcA/csHAejr6wNg8ze/AYARxvRaudo8GB05\nDsDYh0cAmBgdC9/b2wXA+OhIPP5/faRMd976BQDK5VC4w0eOAvBP/77jI+VWlV9arZ7LeW8Dl5jZ\nIjMz4ErgReAp4Ka4zSbgseYUUUQabdaM7+47zGwr8BxQAnYBW4D/AB42s+/HdQ82s6D1uPbaKwCw\nXMjaWUceQK7yJy5k9mIxD8CigX4ACvmQdvNevdw3MX5aeB0NtYPR0XBJcPjwEABHj4YsfuMfnl8t\nRNx/+fJhAPr6lgDwiZVnzOeniTRUXb367v494HvTVr8OXNzwEolI0y3oIbvT2/bZEN3xsZB1u3PV\nn9fdswiAfD5k+uPHQ/t94LSlABSLYdu8V1s/xUJYLhXCgYpdYQ6/d995G4B39r0LQF9XvrJPVrOY\njIV7/1g4ji/sUy2nGA3ZFUnQgktDMw2M+fKXvgSA2eH4Gtrrk5OTlW0mK0MOwros82PVbaasB4zw\nPaVSWGeF8DoxGWoU4+OxL8Ena/YJy0dyYbhw70Q4brF3UV2/T6QVlPFFErRgMn6W6TdedFFl3fr1\n6+NSyLyLFoWsWiyHLDtWqlYPJibCNqVS+KyrK1yLHxmJ1+LjzTvdi6tz8VucwSibyChn+ViWuCK+\nHy9Xb//NrvVPxOMcHQ6TgZyxavVJ/FqR5lLGF0lQx2f86W36Jf3dleXj41Pb9PlCyPgTcbTc2MRI\nZduunrBfjpDZvRzuIM53hSm5LB/+Bo7X9OpXvtfiFF65ctwnvC5ZFo53+PDhyj65YhGAkViG7mL4\nvpFYExDpBMr4IglS4IskqOOr+tOtXnNmZTnrsMsu2xV7QzW7qxiq6GOj1Vl2J8Y/nPJqhM63fC5e\nivPwXTmrDtmtVPVL5fh9Yciuxct3A/1h8E++5nEBox+GKn13d2haLOoJTYklS5ac/I8VaRJlfJEE\ndWzGn96pd/PN1wGwbFn1clupFDroyvFW2sX5OCw3dtDVDqzJlnvj0FyLs+0Wpr3W7lOZkDebrTe+\nmmcdhHFwTr56Gr0YPutfGjJ8X8z4vb29s/1kkZZRxhdJUMdl/CzT//5F5wHQ0xMy/MV/EG5rHRwc\nrGw7PBxui60MwimF9vtozMzFydHKtsXYD2Djod2ftcELsUmfjwNu3KuX3bLnCo6PhuG3WZs/u7Gn\ntyv0KRRz1WG+mZ6u8P3d8fJe7aQgIu2mjC+SoI7J+Fmmv+DT5wCQz4cM3d0dMuaSvpAxrabxP3w0\nTImVZfyChTZ/1ttfLFTntOqKA2nKpZDRx7OBPHEm3tJEvBGnZh6sSsYfOz7lsyzD5+ONN6WJ6uME\nxsbC94/FIcCl8TjhR5yuS6QTKOOLJKitGX+mW2zPP//3ABg68G5cEzL/jv8OE1rW3jbb3RWKn4uz\nX3TnQubNMvPSnmqW7Yrt8cnRD7MVAJQmQob2+L3Z9Fq135srZDfnxGG48cm7Y2OhpjE+Xs34WZ/E\nRJyIsxyvPCxdqja+dA5lfJEEKfBFEtTSqv5nPws7P+Z5Ojd+8fMA9PZm97aHanX2l6ky7z3Vzrds\n6Gw2YjYXt8lZtle1LZF9lvE46CfbIm+hKVCo+VNo8Ysn4333+Vjlzzrwjh0LzYburuqgoiVLQpX+\n3fdDx2MxXs4T6STK+CIJamnGf/75Ls45dyUrVqwAYHD58spnlgtZdOjAfgDylbnw4hx5saOtUNMj\nmI/Llg3OiZfvss69XHUy/cpydkNP1lGXXfrL3tdezsu2HYnz5lm8gSfrYOwfDL/j8MGhyj5vvfAS\nAMeODcffOADAe4eq9+yLtJsyvkiCWprxu7u7WbduHUtPC+3grkK1/btv70EAxsbC5bTeOHAnS8C5\n7DlzNaNjvfLUmzg3Xh3Pps62qa0NwNQZeTOV7B8P2hWH+fbEwTilOMvue0MHK/scPBTa9mesDEOL\n+5eFjN/dW+0HEGk3ZXyRBLU04/f29nD+p8/j4FBoEx88eKDy2fh4aOMX4tDa7Bl02SifrEc9N6Wn\n3qZsmz2Z1mZ4/GyW0bNZdqdvk62vzfzZ5Bkrzzp3yrbHPgg3B7359isAHB0+XvnsrHUbABj5MLTx\nj3wQbgoq7Skj0imU8UUS1NKMP+nO2NgY5fJHs182UcX4WPbM+axRf8JvDJvETctZz/wMbf3ss+zV\np2X+7Fl3tXvm4zX4pUvDU3Oz2XQnSuG42a22i2puuc1+x9j48Sm/Y2KG3yzSLsr4Iglqacb3UomR\nQ4fZ/+YbQLVdDdVRcpXRd3EIXTFeM6/25lfb4OVsdF+cE38iXmfPRu4VqV4C8PgE3S4PP3l8LI4P\niL3tSwb6AVizYUNln1y8Ceilt94EYPD00EM/tOcQAEePh3b84kXV5+INH3k/lOVYuDoxeGYcszA4\nELfY9ZHzItJqyvgiCVLgiySopVX9crnM8PBw5f712gE3+Xw2CCerytf/N6nyPZPTLudNes024bUU\nv78Q788fOOMTAAzGYcTF3uojug7GG22G4uXHfBwSPH0+/3ztpcG4XCiEU5vdnz8wEKr637/r65VN\n/+YHP6/7N4o0kjK+SIJamvFLpRKHDh2qzolXc8tqdUDNzNfvqrWD2iw+OWXfLCNPxiffTNQMxikW\nQyYfHAwZ/ozVawDojTfRTMTDPv3sM5V93h16D4DTeweolWXx8ZEwdLc8UmK6rOPy6NEw2GfXrlBr\nKBQ++re2cuXyhJcuRRpHGV8kQVbPjS0NO5jZEHAcODjbth1ikIVTVlhY5V1IZYWFU96z3P302TZq\naeADmNlOd9/Y0oPO0UIqKyys8i6kssLCK+9sVNUXSZACXyRB7Qj8LW045lwtpLLCwirvQiorLLzy\nnlDL2/gi0n6q6oskqGWBb2ZXm9nLZvaamd3VquPWy8zWmNlTZvaimb1gZnfE9QNm9oSZvRpfl7W7\nrBkzy5vZLjPbHt+vNbMd8Rz/wsw65kmdZtZvZlvN7CUz221ml3bquTWzO+P/gefN7F/MrKeTz+1c\ntCTwzSwP/D3wR8B5wFfN7LxWHPsklIC/dPfzgEuAP49lvAt40t03AE/G953iDmB3zft7gHvdfT1w\nBLitLaWa2X3Ar9z9XOAzhHJ33Lk1s1XAt4CN7v4pIA/cQmef25Pn7k3/B1wKPF7z/m7g7lYcex5l\nfgz4PPAysDKuWwm83O6yxbKsJgTLFcB2wljng0BhpnPe5rKeBrxB7FOqWd9x5xZYBbwDDBCGtG8H\nvtCp53au/1pV1c9OZmZPXNeRzOxs4EJgB7DC3ffFj/YDK9pUrOl+DHyH6swky4H33T27caCTzvFa\nYAj4aWyaPGBmfXTguXX3vcAPgbeBfcBR4Fk699zOiTr3pjGzxcAjwLfdfbj2Mw9/7tt+GcTMrgMO\nuPuz7S5LnQrARcD97n4hYdj2lGp9B53bZcANhD9WZwJ9wNVtLVQTtCrw9wJrat6vjus6ipkVCUH/\nz+7+aFz9npmtjJ+vBA583P4tdBlwvZm9CTxMqO7fB/SbWXbHZSed4z3AHnffEd9vJfwh6MRzexXw\nhrsPufsE8CjhfHfquZ2TVgX+M8CG2DPaRegs2daiY9fFwr29DwK73f1HNR9tAzbF5U2Etn9bufvd\n7r7a3c8mnMvfuPvXgKeAm+JmHVFWAHffD7xjZufEVVcCL9KB55ZQxb/EzBbF/xNZWTvy3M5ZCztN\nrgFeAf4P+Ot2d27MUL7PEaqa/wv8Nv67htB2fhJ4Ffg1MNDusk4r9+XA9ri8Dvgf4DXgX4Hudpev\nppwXADvj+f03YFmnnlvg74CXgOeBnwPdnXxu5/JPI/dEEqTOPZEEKfBFEqTAF0mQAl8kQQp8kQQp\n8EUSpMAXSZACXyRB/w9R2amZbYyszAAAAABJRU5ErkJggg==\n",
             "text/plain": [
-              "<Figure size 432x288 with 1 Axes>"
+              "array([[0.17140187]], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
-          }
+          },
+          "execution_count": 2
         }
       ]
     },
